fix(bs): dark mode is enabled on tap0

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,23 @@
     font-size: 12px;
     letter-spacing: 5px;
 }
+.navbar-black {
+    background-color: black;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 0;
+    border-radius: 0;
+    margin-bottom: 0;
+    font-size: 12px;
+    letter-spacing: 5px;
+}
+
+.body-black{
+    background-color: black;
+    color: #F9F6EE;
+}
+
+
 .navbar-nav  li a:hover {
     color: #1abc9c !important;
 }
@@ -26,6 +43,14 @@
 	width: 100%;
 	height: 60px;
 	background-color: #1abc9c;
+}
+.transparent-footer{
+    position: fixed;
+	text-align: center;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .footer p {
@@ -51,13 +76,6 @@
   /* Styling the slider (the visual part of the toggle) */
   .slider {
     position: absolute;
-    top: 14.5px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding-top: 22.5px;
-    background-color: #ccc;
-    border-radius: 20px;
     cursor: pointer;
   }
   
@@ -67,20 +85,24 @@
     position: absolute;
     width: 20px;
     height: 20px;
-    background-color: white;
+    background-color: black;
     border-radius: 50%;
-    top: 1px;
+    top: 14.5px;
     left: 1px;
     transition: 0.2s;
   }
   
-  /* Move the slider to the right when the toggle is checked */
-  input:checked + .slider {
-    background-color: black;
-  }
   
-  input:checked + .slider::before {
-    transform: translateX(17px);
+  input:checked + .slider::after {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    border-radius: 50%;
+    top: 14.5px;
+    left: 1px;
+    transition: 0.2s;
   }
   
   /* Toggle button ends here */
